fixed clock spacing

--- a/static/master.css
+++ b/static/master.css
@@ -83,7 +83,7 @@ li.greetings.ion-android-person{
 
 .top-clock{
   margin-bottom: 20px;
-  margin-left: 20px;
+  margin-left: 31px;
 }
 
 .menu-size{
